{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 224,
  "lineage": "b1d4acfa-cc1c-e92c-6221-2fee86da4c59",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc2d3e4c0f9ebd18",
            "arn": "arn:aws:ec2:us-east-1:500942944689:instance/i-00aedba482d6b8ed4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00aedba482d6b8ed4",
            "instance_initiated_shutdown_behavior": "terminate",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-014e81b953e1c7697",
            "private_dns": "ip-10-0-2-14.ec2.internal",
            "private_ip": "10.0.2.14",
            "public_dns": "ec2-3-88-31-193.compute-1.amazonaws.com",
            "public_ip": "3.88.31.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0067cf4539222bc74",
                "volume_size": 15,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05ed78521df9fe9da",
            "tags": {
              "Name": "Praful_Portfolio_WebServer"
            },
            "tags_all": {
              "Name": "Praful_Portfolio_WebServer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-012eaa89daa2f2651",
              "sg-0a88dcc4fd9dcce3d"
            ]
          },
          "dependencies": [
            "aws_db_instance.rds",
            "aws_db_option_group.rds",
            "aws_db_parameter_group.rds",
            "aws_db_subnet_group.rds",
            "aws_security_group.rds",
            "aws_security_group.web_sg1",
            "aws_security_group.web_sg2",
            "aws_subnet.rds_subnet1",
            "aws_subnet.rds_subnet2",
            "aws_subnet.web_subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:500942944689:internet-gateway/igw-0483b019d49037d07",
            "id": "igw-0483b019d49037d07",
            "owner_id": "500942944689",
            "tags": {
              "Name": "Portfolio_IGW"
            },
            "tags_all": {
              "Name": "Portfolio_IGW"
            },
            "vpc_id": "vpc-08d5dcfd4c24695bf"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0483b019d49037d07",
            "id": "r-rtb-079462c0e2a4c54281080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-079462c0e2a4c5428",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:500942944689:security-group/sg-0821c92241cfbe305",
            "description": "ssh allow to the mysql",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0821c92241cfbe305",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MYSQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-012eaa89daa2f2651",
                  "sg-0a88dcc4fd9dcce3d"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-012eaa89daa2f2651",
                  "sg-0a88dcc4fd9dcce3d"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mysqlallow",
            "name_prefix": "",
            "owner_id": "500942944689",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG Portfolio RDS"
            },
            "tags_all": {
              "Name": "SG Portfolio RDS"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d5dcfd4c24695bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web_sg1",
            "aws_security_group.web_sg2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:500942944689:security-group/sg-012eaa89daa2f2651",
            "description": "Terraform example security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-012eaa89daa2f2651",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG for Instance",
            "name_prefix": "",
            "owner_id": "500942944689",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Portfolio-WEB-security-group1"
            },
            "tags_all": {
              "Name": "Portfolio-WEB-security-group1"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d5dcfd4c24695bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:500942944689:security-group/sg-0a88dcc4fd9dcce3d",
            "description": "Terraform example security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a88dcc4fd9dcce3d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG2 for Instance",
            "name_prefix": "",
            "owner_id": "500942944689",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Portfolio-WEB-security-group2"
            },
            "tags_all": {
              "Name": "Portfolio-WEB-security-group2"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d5dcfd4c24695bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:500942944689:subnet/subnet-07e6669a8fc80f098",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-07e6669a8fc80f098",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "500942944689",
            "tags": {
              "Name": "rds_private_subnet1"
            },
            "tags_all": {
              "Name": "rds_private_subnet1"
            },
            "vpc_id": "vpc-08d5dcfd4c24695bf"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:500942944689:subnet/subnet-0d9e87b048a402184",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d9e87b048a402184",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "500942944689",
            "tags": {
              "Name": "rds_private_subnet2"
            },
            "tags_all": {
              "Name": "rds_private_subnet2"
            },
            "vpc_id": "vpc-08d5dcfd4c24695bf"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:500942944689:subnet/subnet-05ed78521df9fe9da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-05ed78521df9fe9da",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "500942944689",
            "tags": {
              "Name": "public-subnet2"
            },
            "tags_all": {
              "Name": "public-subnet2"
            },
            "vpc_id": "vpc-08d5dcfd4c24695bf"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:500942944689:subnet/subnet-0825e7a476d9051b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0825e7a476d9051b1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "500942944689",
            "tags": {
              "Name": "public-subnet3"
            },
            "tags_all": {
              "Name": "public-subnet3"
            },
            "vpc_id": "vpc-08d5dcfd4c24695bf"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:500942944689:vpc/vpc-08d5dcfd4c24695bf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c5cef56d90852254",
            "default_route_table_id": "rtb-079462c0e2a4c5428",
            "default_security_group_id": "sg-0586b7b46afe432db",
            "dhcp_options_id": "dopt-968463eb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08d5dcfd4c24695bf",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-079462c0e2a4c5428",
            "owner_id": "500942944689",
            "tags": {
              "Name": "WebVPC"
            },
            "tags_all": {
              "Name": "WebVPC"
            }
          }
        }
      ]
    }
  ]
}